master: fixing secrets reference

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Login to DockerHub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
-        run: docker build -t ci-cd-practice .
+        run: docker build -t ogabek07/ci-cd-practice .
       - name: Publish image to docker hub
         run: docker push ogabek07/ci-cd-practice:latest
   deploy:
@@ -31,8 +31,8 @@ jobs:
     runs-on: [ci-cd-practice]
     steps:
       - name: Pull image from docker hub
-        run: docker pull ci-cd-practice:latest
+        run: docker pull ogabek07/ci-cd-practice:latest
       - name: Delete old container
         run: docker rm -f ci-cd-container
       - name: Run docker container
-        run: docker run -d -p 8080 --name ci-cd-container ci-cd-practice
+        run: docker run -d -p 8080 --name ci-cd-container ogabek07/ci-cd-practice
