--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,13 +26,18 @@ jobs:
         run: docker build -t ogabek07/ci-cd-practice .
       - name: Publish image to docker hub
         run: docker push ogabek07/ci-cd-practice:latest
-      - name: Trigger ./run.sh on EC2
+      - name: Run script on EC2 instance
         uses: appleboy/ssh-action@master
         with:
           host: 34.201.217.173
           username: ec2-user
           key: ${{secrets.SSH_PRIVATE_KEY}}
           script: ./run.sh
+          port: 22
+          timeout: 30s
+          command_timeout: 10m
+          proxy_port: 22
+          proxy_timeout: 30s
   deploy:
     needs: build
     runs-on: [ci-cd]
