--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,12 +32,8 @@ jobs:
           host: 34.201.217.173
           username: ec2-user
           key: ${{secrets.SSH_PRIVATE_KEY}}
-          script: ./run.sh && break
-          port: 22
-          timeout: 30s
-          command_timeout: 10m
-          proxy_port: 22
-          proxy_timeout: 30s
+          script: |
+            timeout 10s ./run.sh
   deploy:
     needs: build
     runs-on: [ci-cd]
