--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,7 +33,11 @@ jobs:
           username: ec2-user
           key: ${{secrets.SSH_PRIVATE_KEY}}
           script: |
-            timeout 10s ./run.sh
+            if pgrep -f "github-runner" >/dev/null; then
+              echo "runner is active"
+            else 
+              ./run.sh
+            fi
   deploy:
     needs: build
     runs-on: [ci-cd]
