--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Login to DockerHub
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
-        run: docker build -t ogabek07/ci-cd-practice .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/ci-cd-practice .
       - name: Publish image to docker hub
-        run: docker push ogabek07/ci-cd-practice:latest
+        run: docker push ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
       - name: Run script on EC2 instance
         uses: appleboy/ssh-action@master
         with:
@@ -40,13 +40,13 @@ jobs:
             fi
   deploy:
     needs: build
-    runs-on: [ci-cd]
+    runs-on: [ ci-cd ]
     steps:
       - name: Login to DockerHub
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
       - name: Pull image from docker hub
-        run: docker pull ogabek07/ci-cd-practice:latest
+        run: docker pull ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
       - name: Delete old container
         run: docker rm -f ci-cd-container
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --name ci-cd-container ogabek07/ci-cd-practice
+        run: docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice
