--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
+  flyway:
+    baseline-on-migrate: true
+    default-schema: public
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://127.0.0.1:5432/ci_cd
+    url: jdbc:postgresql://database-3.cv6gcek0wleb.us-east-1.rds.amazonaws.com:5432/mydb
     username: postgres
     password: slark343
   mail:
@@ -19,8 +22,6 @@ spring:
         format_sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-  profiles:
-    default: local
 
 jwt:
   access: 5 #in minutes
