--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run script on EC2 instance
         uses: appleboy/ssh-action@master
         with:
-          host: 34.201.217.173
+          host: 54.90.179.115
           username: ec2-user
           key: ${{secrets.SSH_PRIVATE_KEY}}
           script: |
@@ -40,7 +40,7 @@ jobs:
             fi
   deploy:
     needs: build
-    runs-on: [ ci-cd ]
+    runs-on: [ ci_cd_runner ]
     steps:
       - name: Login to DockerHub
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
