--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,7 +40,7 @@ jobs:
             fi
   deploy:
     needs: build
-    runs-on: [ ci_cd_runner ]
+    runs-on: [ ci-cd ]
     steps:
       - name: Login to DockerHub
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
