--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,10 +43,10 @@ jobs:
     runs-on: [ ci-cd ]
     steps:
       - name: Login to DockerHub
-        run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
+        run: sudo docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
       - name: Pull image from docker hub
-        run: docker pull ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
+        run: sudo docker pull ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
       - name: Delete old container
-        run: docker rm -f ci-cd-container
+        run: sudo docker rm -f ci-cd-container
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice
+        run: sudo docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice
