--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Login to DockerHub
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/ci-cd-practice .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest .
       - name: Publish image to docker hub
         run: docker push ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
       - name: Run script on EC2 instance
@@ -49,4 +49,4 @@ jobs:
       - name: Delete old container
         run: sudo docker rm -f ci-cd-container
       - name: Run docker container
-        run: sudo docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice
+        run: sudo docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
