--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,20 +23,20 @@ jobs:
       - name: Login to DockerHub
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/ci-cd-practice .
       - name: Publish image to docker hub
         run: docker push ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
       - name: Run script on EC2 instance
         uses: appleboy/ssh-action@master
         with:
-          host: 3.91.1.72
+          host: 52.4.71.213
           username: ec2-user
           key: ${{secrets.SSH_PRIVATE_KEY}}
           script: |
             if pgrep -f "github-runner" >/dev/null; then
               echo "runner is active"
             else
-              cd actions-runner && ./run.sh
+              ./run.sh
             fi
   deploy:
     needs: build
@@ -49,4 +49,4 @@ jobs:
       - name: Delete old container
         run: sudo docker rm -f ci-cd-container
       - name: Run docker container
-        run: sudo docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
+        run: sudo docker run -d -p 8080:8080 --name ci-cd-container ${{secrets.DOCKER_USERNAME}}/ci-cd-practice
