--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,12 +32,7 @@ jobs:
           host: 52.4.71.213
           username: ec2-user
           key: ${{secrets.SSH_PRIVATE_KEY}}
-          script: |
-            if pgrep -f "github-runner" >/dev/null; then
-              echo "runner is active"
-            else
-              ./run.sh
-            fi
+          script: ./run.sh
   deploy:
     needs: build
     runs-on: [ ci-cd ]
