--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,7 +28,7 @@ jobs:
         run: docker push ${{secrets.DOCKER_USERNAME}}/ci-cd-practice:latest
   deploy:
     needs: build
-    runs-on: [ ci-cd ]
+    runs-on: [ demo-ci-cd ]
     steps:
       - name: Login to DockerHub
         run: sudo docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
