--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     default-schema: public
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://database-3.cv6gcek0wleb.us-east-1.rds.amazonaws.com:5432/mydb
+    url: jdbc:postgresql://127.0.0.1:5432/mydb
     username: postgres
     password: slark343
   mail:
