--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.4'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.4'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.4'
-    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.liquibase:liquibase-core'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-security'
