--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,16 @@
 spring:
-  flyway:
-    baseline-on-migrate: true
-    default-schema: public
+  profiles:
+    active: local
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://127.0.0.1:5432/mydb
     username: postgres
     password: slark343
+  liquibase:
+    change-log: classpath:/db/changelog/changelog-master.xml
+    liquibase-schema: migration
+    default-schema: public
+    enabled: true
   mail:
     host: smtp.gmail.com
     port: 465
@@ -16,7 +20,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
