--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -26,14 +26,13 @@ definitions:
           - docker push ogabek07/ci_cd
     - step: &deployment
         name: Deploy to K8s
-        deployment: master
         script:
-          - pipe: atlassian/kubernetes-deploy:1.3.0
-            variables:
-              KUBE_CONFIG_DATA: $KUBE_CONFIG_DATA
-              IMAGE: ogabek07/ci_cd
-              NAMESPACE: your-namespace
-              DEPLOYMENT: master
+          - echo $GCLOUD_SERVICE_KEY_FILE | base64 --decode --ignore-garbage > ./gcloud-service-key.json
+          - gcloud auth activate-service-account --key-file=gcloud-service-key.json
+          - gcloud container clusters get-credentials cicd --zone us-central1 --project sunny-emissary-421003
+          - docker build -t gcr.io/sunny-emissary-421003/ogabek07/ci_cd:latest .
+          - docker push gcr.io/sunny-emissary-421003/ogabek07/ci_cd:latest
+          - kubectl apply -f path/to/kubernetes-manifests
 pipelines:
   pull-requests:
     '**':
