--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: local
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://127.0.0.1:5432/mydb
+    url: jdbc:postgresql://127.0.0.1:5432/cabinet
     username: postgres
     password: slark343
   liquibase:
