--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,31 +2,25 @@ name: Deploy to GKE
 
 on:
   push:
-    branches:
-      - master
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+
+      - name: Login to Google Cloud
+        run: echo ${{ GKE_SA_KEY }} | base64 -d | gcloud auth activate-service-account --key-file=-
 
       - name: Build Docker image
-        run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }} .
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }}
+        run: gradle clean build | docker build -t gcr.io/${{GKE_PROJECT}}/ci-cd-practice:latest
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+      - name: Login to Container Registry
+        run: gcloud auth configure-docker gcr.io/${{GKE_PROJECT}}
 
-      - name: Configure kubectl
-        run: |
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+      - name: Push Docker image
+        run: docker push gcr.io/$GKE_PROJECT/ci-cd-practice:latest
 
-      - name: Apply Kubernetes configuration
-        run: |
-          kubectl apply -f deployment.yaml
+      - name: Deploy to GKE
+        run: kubectl apply -f deployment.yaml
