--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Login to Google Cloud
-        run: echo ${{ GKE_SA_KEY }} | base64 -d | gcloud auth activate-service-account --key-file=-
+        run: echo ${{ secrets.GKE_SA_KEY }} | base64 -d | gcloud auth activate-service-account --key-file=-
 
       - name: Build Docker image
-        run: gradle clean build | docker build -t gcr.io/${{GKE_PROJECT}}/ci-cd-practice:latest
+        run: gradle clean build | docker build -t gcr.io/${{secrets.GKE_PROJECT}}/ci-cd-practice:latest
 
       - name: Login to Container Registry
-        run: gcloud auth configure-docker gcr.io/${{GKE_PROJECT}}
+        run: gcloud auth configure-docker gcr.io/${{secrets.GKE_PROJECT}}
 
       - name: Push Docker image
-        run: docker push gcr.io/$GKE_PROJECT/ci-cd-practice:latest
+        run: docker push gcr.io/${{secrets.GKE_PROJECT}}/ci-cd-practice:latest
 
       - name: Deploy to GKE
         run: kubectl apply -f deployment.yaml
