--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,7 @@ jobs:
 
       - name: Decode service account key and activate
         run: |
-          echo $${{ secrets.SERVICE_ACCOUNT_KEY }} | base64 -d > service_account.json
-          gcloud auth activate-service-account \
-            --key-file=service_account.json \
+          echo $${{ secrets.GCP_SA_KEY }} | base64 -d | gcloud auth activate-service-account --stdin \
             khamdamov343@gmail.com
 
       - name: Build Docker image
