--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,60 @@
-name: Deploy to GKE
+name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - main
+
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GKE_CLUSTER: ${{ GKE_CLUSTER_NAME }}
+  GKE_ZONE: ${{ GKE_CLUSTER_ZONE }}
+  DEPLOYMENT_NAME: my-demo-cluster
 
 jobs:
-  build-and-deploy:
+  setup-build-publish-deploy:
+    name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Decode service account key and activate
-        run: |
-          echo "${{ secrets.GCP_SA_KEY }}" | base64 -d | gcloud auth activate-service-account khamdamov343@gmail.com
+      - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Build Docker image
-        run: gradle clean build | docker build -t gcr.io/${{secrets.GKE_PROJECT}}/ci-cd-practice:latest
+      - run: |-
+          gcloud --quiet auth configure-docker
 
-      - name: Login to Container Registry
-        run: gcloud auth configure-docker gcr.io/${{secrets.GKE_PROJECT}}
+      - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER_NAME }}
+          location: ${{ env.GKE_CLUSTER_ZONE }}
+          credentials: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Push Docker image
-        run: docker push gcr.io/${{secrets.GKE_PROJECT}}/ci-cd-practice:latest
+      - name: Build
+        run: |-
+          docker build \
+            --tag "gcr.io/${{ GCP_PROJECT_ID }}/$IMAGE:$GITHUB_SHA" \
+            --build-arg GITHUB_SHA="$GITHUB_SHA" \
+            --build-arg GITHUB_REF="$GITHUB_REF" \
+            .
 
-      - name: Deploy to GKE
-        run: kubectl apply -f deployment.yaml
+      - name: Publish
+        run: |-
+          docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+
+      - name: Set up Kustomize
+        run: |-
+          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+          chmod u+x ./kustomize
+
+      - name: Deploy
+        run: |-
+          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/${{ GCP_PROJECT_ID }}/$IMAGE:$GITHUB_SHA
+          ./kustomize build . | kubectl apply -f -
+          kubectl rollout status deployment/my-demo-cluster
+          kubectl get services -o wide
