--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
 
       - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
         with:
+          project_id: $env.PROJECT_ID
           cluster_name: $env.GKE_CLUSTER
           location: $env.GKE_ZONE
           credentials: ${{ secrets.GCP_SA_KEY }}
