--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,11 @@ jobs:
           export_default_credentials: true
       - name: Build Docker image
         run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
+          gcloud auth configure-docker ogabek07
           gradle clean build
-          docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }} .
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }}
+          docker login --username ${{DOCKER_USERNAME}} --password ${{DOCKER_PASSWORD}}
+          docker build -t ogabek07/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }} .
+          docker push ogabek07/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }}
 
       - name: Deploy to GKE
         env:
