--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           gcloud auth configure-docker ogabek07
           gradle clean build
-          docker login --username ${{DOCKER_USERNAME}} --password ${{DOCKER_PASSWORD}}
+          docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
           docker build -t ogabek07/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }} .
           docker push ogabek07/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }}
 
