--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
           gcloud auth configure-docker ogabek07
           gradle clean build
           docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
-          docker build -t ogabek07/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }} .
-          docker push ogabek07/${{ secrets.GCP_PROJECT_ID }}/app:${{ github.sha }}
+          docker build -t ogabek07/app:latest .
+          docker push ogabek07/app:latest
 
       - name: Deploy to GKE
         env:
