--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,5 +41,5 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
           gcloud container clusters get-credentials autopilot-cluster-1 --region us-central1
-          kubectl apply -f resource.yaml
-
+          cd path/to/directory/containing/config.yaml
+          kubectl apply -f config.yaml
