--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,4 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
           gcloud container clusters get-credentials autopilot-cluster-1 --region us-central1
-          kubectl apply -f deployment.yaml
+          kubectl apply -f deployment.yml
