--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,11 @@ jobs:
       - name: Build Docker image
         run: |
           gcloud components install gke-gcloud-auth-plugin
-          gcloud auth configure-docker ogabek07
+          gcloud auth configure-docker ${{secrets.DOCKER_USERNAME}}
           gradle clean build
           docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
-          docker build -t ogabek07/app:latest .
-          docker push ogabek07/app:latest
+          docker build -t ${{secrets.DOCKER_USERNAME}}/app:latest .
+          docker push ${{secrets.DOCKER_USERNAME}}/app:latest
 
       - name: Deploy to GKE
         env:
