--- a/deployment.yml
+++ b/deployment.yml
@@ -6,11 +6,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: my-demo-cluster
+      app: ci-cd
   template:
     metadata:
       labels:
-        app: my-demo-cluster
+        app: ci-cd
     spec:
       containers:
         - name: my-demo-cluster
