--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Deploy to GKE
         run: |-
-          ./kustomize edit set image ${{ DOCKER_USERNAME }}/PROJECT_ID/github-actions-gke-image:latest=${{ DOCKER_USERNAME }}/$PROJECT_ID/github-actions-gke-image:latest
+          ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/PROJECT_ID/github-actions-gke-image:latest=${{ secrets.DOCKER_USERNAME }}/$PROJECT_ID/github-actions-gke-image:latest
           ./kustomize build . | kubectl apply -f -
           kubectl rollout status deployment/$DEPLOYMENT_NAME
           kubectl get services -o wide
