--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -29,11 +29,11 @@ jobs:
         run: gradle clean build
 
       - name: Set up Google Cloud SDK
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@0.1.3
+        uses: github-actions/setup-gcloud@0.1.3
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+          install_components: "gke-gcloud-auth-plugin"
 
       - name: Configure Docker
         run: |- 
