--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -36,12 +36,11 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure Docker
+      - name: Configure GCloud
         run: |- 
           gcloud --quiet auth configure-docker
-
-      - name: Get GKE credentials
-        run: |-
+          gcloud components install kubectl
+          gcloud components install kubectl-gke-gcloud-auth-plugin
           gcloud container clusters get-credentials "$CLUSTER_NAME" --zone "$GKE_ZONE"
 
       - name: Docker image
