--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -40,7 +40,7 @@ jobs:
         run: |- 
           gcloud --quiet auth configure-docker
           gcloud components install kubectl
-          gcloud components install kubectl-gke-gcloud-auth-plugin
+          gcloud components install gke-gcloud-auth-plugin
           gcloud container clusters get-credentials "$CLUSTER_NAME" --zone "$GKE_ZONE"
 
       - name: Docker image
