--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Deploy to GKE
         run: |-
-          ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/PROJECT_ID/my-demo-cluster:latest=${{ secrets.DOCKER_USERNAME }}/$PROJECT_ID/my-demo-cluster:latest
+          ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/app:latest=${{ secrets.DOCKER_USERNAME }}/app:latest
           ./kustomize build . | kubectl apply -f -
           kubectl rollout status deployment/$DEPLOYMENT_NAME
           kubectl get services -o wide
