--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -56,5 +56,4 @@ jobs:
         run: |-
           ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/app:latest=${{ secrets.DOCKER_USERNAME }}/app:latest
           ./kustomize build . | kubectl apply -f -
-          kubectl rollout restart deployment/$DEPLOYMENT_NAME
-          kubectl get services -o wide
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:latest
