--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -58,4 +58,4 @@ jobs:
         run: |-
           ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/app:latest=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
           ./kustomize build . | kubectl apply -f -
-          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:latest
