--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -56,6 +56,6 @@ jobs:
 
       - name: Deploy to GKE
         run: |-
-          ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/app:latest=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
+          ./kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
           ./kustomize build . | kubectl apply -f -
-          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:latest
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
