--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -49,13 +49,11 @@ jobs:
           docker build -t ${{secrets.DOCKER_USERNAME}}/app:$IMAGE_TAG .
           docker push ${{secrets.DOCKER_USERNAME}}/app:$IMAGE_TAG
 
-      - name: Set up Kustomize
-        run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
-
       - name: Deploy to GKE
-        run: |-
-          ./kustomize build . | kubectl apply -f -
-          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
+        uses: alpine/helm:3.10.1
+        run: |
+          envsubst '${{github.sha}}' < Chart.yaml > dumpfile && mv dumpfile Chart.yaml
+          envsubst '${{github.sha}}' < values.yaml > dumpfile && mv dumpfile values.yaml
+          helm upgrade --install --wait --timeout 300s ci-cd-pipeline --version 0.0.${{ github.sha}} -n development -f values.yaml
+
 
