--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -53,6 +53,6 @@ jobs:
         run: |
           envsubst '${{github.sha}}' < Chart.yaml > dumpfile && mv dumpfile Chart.yaml
           envsubst '${{github.sha}}' < values.yaml > dumpfile && mv dumpfile values.yaml
-          helm upgrade --install --wait --timeout 300s ci-cd-pipeline cd-cd --version 0.0.${{ github.sha}} -n development -f values.yaml
+          helm --install --wait --timeout 300s ci-cd-pipeline --version 0.0.${{ github.sha}} -n development -f values.yaml
 
 
