--- a/deployment.yml
+++ b/deployment.yml
@@ -17,3 +17,8 @@ spec:
           image: ogabek07/app:${{github.sha}}
           ports:
             - containerPort: 8080
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
