--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -49,9 +49,13 @@ jobs:
           docker build -t ${{secrets.DOCKER_USERNAME}}/app:$IMAGE_TAG .
           docker push ${{secrets.DOCKER_USERNAME}}/app:$IMAGE_TAG
 
+      - name: Set up Kustomize
+        run: |-
+          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+          chmod u+x ./kustomize
+
       - name: Deploy to GKE
-        run: |
-          env subst '${{github.sha}}' < helm/Chart.yaml > dumpfile && mv dumpfile helm/Chart.yaml
-          env subst '${{github.sha}}' < helm/values.yaml > dumpfile && mv dumpfile helm/values.yaml
-          helm dependency build helm
-          helm upgrade --wait --timeout 300s --atomic --install ci-cd-pipeline helm --version 0.0.${{ github.sha}} --namespace development --values values.yaml
+        run: |-
+          ./kustomize build . | kubectl apply -f -
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
+
