--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -49,13 +49,14 @@ jobs:
           docker build -t ${{secrets.DOCKER_USERNAME}}/app:$IMAGE_TAG .
           docker push ${{secrets.DOCKER_USERNAME}}/app:$IMAGE_TAG
 
-      - name: Set up Kustomize
-        run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
-
-      - name: Deploy to GKE
-        run: |-
-          ./kustomize build . | kubectl apply -f -
-          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} my-demo-cluster=${{ secrets.DOCKER_USERNAME }}/app:$IMAGE_TAG
-
+      - name: Set up Kubernetes configuration
+        run: |
+          mkdir -p ~/.kube
+          echo "${{ secrets.KUBE_CONFIG_CI_CD }}" | base64 -d > ~/.kube/config
+          sudo apt-get update
+          sudo apt-get install -y gettext curl bash
+          cd helm
+          envsubst '${{ github.sha }}' < Chart.yaml > tmpfile && mv tmpfile Chart.yaml
+          envsubst '${{ github.sha }}' < values.yaml > tmpfile && mv tmpfile values.yaml
+          helm dependency build
+          helm upgrade --wait --timeout 300s --atomic --install ci-cd-pipeline ./helm --version 0.1.${{ github.sha }} -n development -f values.yaml
